Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22114

Assertion `!is_owned()' failed. | handle_fatal_signal (sig=6) in MutexDebug

    XMLWordPrintable

Details

    Description

      USE test;
      CREATE TABLE t (a INT) ROW_FORMAT=COMPRESSED;
      SET GLOBAL innodb_buffer_pool_evict='uncompressed';
      

      Leads to:

      mysqld: /data/git/10.5_dbg/storage/innobase/include/sync0policy.h:121: void MutexDebug<Mutex>::enter(const Mutex&, const char*, unsigned int) [with Mutex = TTASEventMutex<BlockMutexPolicy>]: Assertion `!is_owned()' failed.
      

      Core was generated by `/data/MD180320-mariadb-10.5.2-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      [Current thread is 1 (Thread 0x7f0fc0706700 (LWP 23510))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      #1  0x000055ba663c17d4 in my_write_core (sig=sig@entry=6) at /data/git/10.5_dbg/mysys/stacktrace.c:518
      #2  0x000055ba65b6ab5f in handle_fatal_signal (sig=6) at /data/git/10.5_dbg/sql/signal_handler.cc:325
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x00007f0fbee4a801 in __GI_abort () at abort.c:79
      #6  0x00007f0fbee3a39a in __assert_fail_base (fmt=0x7f0fbefc17d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x55ba667a917a "!is_owned()", file=file@entry=0x55ba667a9140 "/data/git/10.5_dbg/storage/innobase/include/sync0policy.h", line=line@entry=121, function=function@entry=0x55ba667cbbe0 <_ZZN10MutexDebugI14TTASEventMutexI16BlockMutexPolicyEE5enterERKS2_PKcjE19__PRETTY_FUNCTION__> "void MutexDebug<Mutex>::enter(const Mutex&, const char*, unsigned int) [with Mutex = TTASEventMutex<BlockMutexPolicy>]") at assert.c:92
      #7  0x00007f0fbee3a412 in __GI___assert_fail (assertion=assertion@entry=0x55ba667a917a "!is_owned()", file=file@entry=0x55ba667a9140 "/data/git/10.5_dbg/storage/innobase/include/sync0policy.h", line=line@entry=121, function=function@entry=0x55ba667cbbe0 <_ZZN10MutexDebugI14TTASEventMutexI16BlockMutexPolicyEE5enterERKS2_PKcjE19__PRETTY_FUNCTION__> "void MutexDebug<Mutex>::enter(const Mutex&, const char*, unsigned int) [with Mutex = TTASEventMutex<BlockMutexPolicy>]") at assert.c:101
      #8  0x000055ba65fe53e5 in MutexDebug<TTASEventMutex<BlockMutexPolicy> >::enter (line=1416, filename=0x55ba6685c6f8 "/data/git/10.5_dbg/storage/innobase/buf/buf0lru.cc", mutex=..., this=0x7f0fa1429ae8) at /data/git/10.5_dbg/storage/innobase/include/sync0policy.h:121
      #9  PolicyMutex<TTASEventMutex<BlockMutexPolicy> >::enter (this=0x7f0fa1429ad8, n_spins=30, n_delay=4, name=0x55ba6685c6f8 "/data/git/10.5_dbg/storage/innobase/buf/buf0lru.cc", line=1416) at /data/git/10.5_dbg/storage/innobase/include/ib0mutex.h:592
      #10 0x000055ba66223fb3 in buf_LRU_free_page (bpage=bpage@entry=0x7f0fa1429928, zip=zip@entry=false) at /data/git/10.5_dbg/storage/innobase/buf/buf0lru.cc:1416
      #11 0x000055ba65f31b27 in innodb_buffer_pool_evict_uncompressed () at /data/git/10.5_dbg/storage/innobase/handler/ha_innodb.cc:18256
      #12 0x000055ba65f329ff in innodb_buffer_pool_evict_update (save=<optimized out>) at /data/git/10.5_dbg/storage/innobase/handler/ha_innodb.cc:18281
      #13 0x000055ba658ddc9d in sys_var_pluginvar::global_update (this=0x7f0fbe3e90a0, thd=0x7f0f93815088, var=0x7f0f93874250) at /data/git/10.5_dbg/sql/sql_plugin.cc:3589
      #14 0x000055ba657dba78 in sys_var::update (this=0x7f0fbe3e90a0, thd=0x7f0f93815088, var=0x7f0f93874250) at /data/git/10.5_dbg/sql/set_var.cc:207
      #15 0x000055ba657dbfa1 in set_var::update (this=<optimized out>, thd=<optimized out>) at /data/git/10.5_dbg/sql/set_var.cc:859
      #16 0x000055ba657dd35e in sql_set_variables (thd=thd@entry=0x7f0f93815088, var_list=var_list@entry=0x7f0f93819fa0, free=free@entry=true) at /data/git/10.5_dbg/sql/set_var.cc:746
      #17 0x000055ba658c635b in mysql_execute_command (thd=thd@entry=0x7f0f93815088) at /data/git/10.5_dbg/sql/sql_parse.cc:4967
      #18 0x000055ba658d07a5 in mysql_parse (thd=thd@entry=0x7f0f93815088, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7f0fc0705450, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /data/git/10.5_dbg/sql/sql_parse.cc:7926
      #19 0x000055ba658bc664 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7f0f93815088, packet=packet@entry=0x7f0f93867089 "SET GLOBAL innodb_buffer_pool_evict='uncompressed'", packet_length=packet_length@entry=50, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /data/git/10.5_dbg/sql/sql_parse.cc:1839
      #20 0x000055ba658baeaf in do_command (thd=0x7f0f93815088) at /data/git/10.5_dbg/sql/sql_parse.cc:1358
      #21 0x000055ba65a14a09 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x7f0f9ca2b3a8, put_in_cache=put_in_cache@entry=true) at /data/git/10.5_dbg/sql/sql_connect.cc:1422
      #22 0x000055ba65a14d38 in handle_one_connection (arg=arg@entry=0x7f0f9ca2b3a8) at /data/git/10.5_dbg/sql/sql_connect.cc:1319
      #23 0x000055ba65e71cfc in pfs_spawn_thread (arg=0x7f0fbe045888) at /data/git/10.5_dbg/storage/perfschema/pfs.cc:2201
      #24 0x00007f0fbfb2d6db in start_thread (arg=0x7f0fc0706700) at pthread_create.c:463
      #25 0x00007f0fbef2b88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.5.2 (dbg)

      Bug confirmed not present in:
      MariaDB: 10.1.45 (dbg), 10.1.45 (opt), 10.2.32 (dbg), 10.2.32 (opt), 10.3.23 (dbg), 10.3.23 (opt), 10.4.13 (dbg), 10.4.13 (opt), 10.5.2 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 55m
                  55m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.