MDEV-22114 Assertion failure on SET GLOBAL innodb_buffer_pool_evict='uncompressed'

innodb_buffer_pool_evict_uncompressed(): Remove the mutex acquisition
that was inadvertently added in 1a6f708ec594ac0ae2dd30db926ab07b100fa24b.