storage/innobase/handler/ha_innodb.cc
@@ -18279,10 +18279,8 @@ innodb_buffer_pool_evict_uncompressed()
 		ut_ad(buf_block_get_state(block) == BUF_BLOCK_FILE_PAGE);
 		ut_ad(block->in_unzip_LRU_list);
 		ut_ad(block->page.in_LRU_list);
-		mutex_enter(&block->mutex);
 
 		if (!buf_LRU_free_page(&block->page, false)) {
-			mutex_exit(&block->mutex);
 			all_evicted = false;
 		}
 		block = prev_block;
